objects/Invoice_Document_Data__c.object
<CustomObject>
    <fields>
        <fullName>Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Owner__c</fullName>
        <description>Responsible Party for Document upload</description>
        <label>Document Owner</label>
        <picklist>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinancingType__c</fullName>
        <description>Type of Financing eg. Loan, Lease, Cash, New Homes Lease etc.</description>
        <label>Financing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Installation Model. Created to support Loan Backend</description>
        <label>Installation Model</label>
        <referenceTo>Installation_Model__c</referenceTo>
        <relationshipLabel>Invoice Document Data</relationshipLabel>
        <relationshipName>Invoice_Document_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Document__c</fullName>
        <label>Invoice Document</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <externalId>true</externalId>
        <label>Invoice Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location where the document is supposed to be uploaded(Only for Shared documents)</description>
        <label>Document Upload Location</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_Required_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Required for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Invoice Documents will be created based on this value for participating Partners</description>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_for_Lease_Contract_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It&apos;s a checkbox checked for all document which are required to create the Lease Contract..</description>
        <label>Required for Lease Contract Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_With__c</fullName>
        <description>Other Parties the document can be shared with</description>
        <label>Shared With</label>
        <picklist>
            <picklistValues>
                <fullName>DRIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sharing_Type__c</fullName>
        <description>Defines the sharing setup of the object(Secure or Shared)</description>
        <label>Sharing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Shared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Defines the type. Document or a Task. Task are also being tracked as part of Invoice document data starting from TPS project</description>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Invoice Document Data</label>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CA</fullName>
        <columns>Installation_Model__c</columns>
        <columns>NAME</columns>
        <columns>Invoice_Type__c</columns>
        <columns>State__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FinancingType__c</field>
            <operation>equals</operation>
            <value>Lease</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>8/29/2016</value>
        </filters>
        <filters>
            <field>Installation_Model__c</field>
            <operation>notContain</operation>
            <value>TPS</value>
        </filters>
        <label>CO</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CA_NH_Lease</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Type__c</columns>
        <columns>FinancingType__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>FinancingType__c</field>
            <operation>equals</operation>
            <value>NH Lease</value>
        </filters>
        <filters>
            <field>Invoice_Type__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>CA NH Lease</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CT</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>State__c</columns>
        <columns>Installation_Model__c</columns>
        <columns>FinancingType__c</columns>
        <columns>Location__c</columns>
        <columns>Sharing_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FinancingType__c</field>
            <operation>equals</operation>
            <value>Loan</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NJ</value>
        </filters>
        <label>Loan_CA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CT1</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>State__c</columns>
        <columns>FinancingType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FinancingType__c</field>
            <operation>equals</operation>
            <value>NH Lease</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterThan</operation>
            <value>10/7/2016</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>CO</value>
        </filters>
        <label>NH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FL</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>State__c</columns>
        <columns>FinancingType__c</columns>
        <columns>Installation_Model__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>AZ</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/2/2016</value>
        </filters>
        <filters>
            <field>FinancingType__c</field>
            <operation>equals</operation>
            <value>Loan</value>
        </filters>
        <label>FL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Lease_State_CO_View</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>FinancingType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>CO</value>
        </filters>
        <label>Lease_States_CO</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MA</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Type__c</columns>
        <columns>FinancingType__c</columns>
        <columns>Installation_Model__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>MA</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/2/2016</value>
        </filters>
        <label>MA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MD</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>State__c</columns>
        <columns>FinancingType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NJ</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/2/2016</value>
        </filters>
        <filters>
            <field>OBJECT_ID</field>
            <operation>equals</operation>
        </filters>
        <label>MD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NC</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>State__c</columns>
        <columns>FinancingType__c</columns>
        <columns>Installation_Model__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/2/2016</value>
        </filters>
        <label>NC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NJ_1</fullName>
        <columns>FinancingType__c</columns>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Document_Owner__c</columns>
        <columns>Shared_With__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Installation_Model__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NJ</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>FinancingType__c</field>
            <operation>equals</operation>
            <value>Loan</value>
        </filters>
        <label>NJ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NY</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Document_Owner__c</columns>
        <columns>Installation_Model__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NY</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <label>NY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NYNonTPS</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Document_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NY</value>
        </filters>
        <filters>
            <field>Installation_Model__c</field>
            <operation>equals</operation>
        </filters>
        <label>NY Non TPS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SC</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>State__c</columns>
        <columns>FinancingType__c</columns>
        <columns>Installation_Model__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>SC</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/2/2016</value>
        </filters>
        <label>SC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>State_View1</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>FinancingType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FinancingType__c</field>
            <operation>contains</operation>
            <value>nh</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2016</value>
        </filters>
        <label>State View - NH</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Invoice Document Data  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Document Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Location_Required_for_Shared_Type</fullName>
        <active>true</active>
        <description>Location value required for Shared type of documents</description>
        <errorConditionFormula>AND( ISPICKVAL(Sharing_Type__c, &apos;Shared&apos;) ,ISPICKVAL( Location__c,&apos;&apos; ))</errorConditionFormula>
        <errorMessage>Location value is required if sharing type is shared</errorMessage>
    </validationRules>
</CustomObject>